# rust-gh-token-fetch

./: .env  .gitignore  CHANGE_LOG.md  CONTRIBUTING.md  Cargo.toml  DEV_NOTES.md  README.md  install.sh  private-key.pem
.github/workflows/: release.yml
src/: fetch_token.rs  jwt.rs  main.rs
