[package]
name = "rust-token-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
